--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>The CSS Box Model and Common Properties</title>
 
         <!-- ADD YOUR NAME TO THE AUTHOR TAG -->
-        <!-- TO DO -->
-        <meta name="author" content="">
+        <!-- DONE -->
+        <meta name="author" content="Elizabeth Villar">
         <meta name="description" content="Practicing the CSS Box Model and commonly used CSS properties">
 
         <!-- THIS META TAG IS INCLUDED BECAUSE THIS PAGE IS RESPONSIVE -->
@@ -18,7 +18,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;900&display=swap" rel="stylesheet">
 
         <!-- LINK TO CSS FILE -->
-        <!-- TO DO -->
+        <!-- DONE -->
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body id="top">
         <header>
